...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xzL-Ki-oOE">
                                                <rect key="frame" x="34" y="20.5" width="78" height="30"/>
                                                <state key="normal" title="Add Money"/>
                                                <connections>
                                                    <action selector="AddMoney:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ugC-Nm-IGY"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="An7-Oz-JIW">
                                                <rect key="frame" x="32.5" y="50.5" width="81" height="30"/>
                                                <state key="normal" title="Coin Return"/>
                                                <connections>
                                                    <action selector="returnCoins:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Oum-C5-gmG"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qMI-nh-LwC">
                                                <rect key="frame" x="19" y="32.5" width="90" height="48"/>
                                                <state key="normal" title="Take Change"/>
                                                <connections>
                                                    <action selector="takeChange:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qpu-5i-LHM"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwt-9n-GS1">
                                        <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
                                        <state key="normal" title="Buy Chips"/>
                                        <connections>
                                            <action selector="buyChips:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gbt-ye-waS"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fs4-t4-Ulx">
                                        <rect key="frame" x="175" y="0.0" width="75" height="30"/>
                                        <state key="normal" title="Buy Candy"/>
                                        <connections>
                                            <action selector="buyCandy:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V1B-gF-RMQ"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6xi-ZQ-tEY">
                                <rect key="frame" x="50.5" y="454" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" label="Sold Out"/>
                                <connections>
                                    <action selector="setSoldOutStatus:" destination="BYZ-38-t0r" eventType="valueChanged" id="0Mi-aM-aoW"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="dEP-oT-W37">
                                <rect key="frame" x="50.5" y="500" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" label="Exact Change"/>
                                <connections>
                                    <action selector="exactChangeSwitchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="0xz-h8-U6X"/>
...
